--- a/Develop/pages/home.html
+++ b/Develop/pages/home.html
@@ -11,8 +11,25 @@
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/723d8fa4ad.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="Develop\style.css">
 </head>
 <body>
+  <div class="container">
+
+    <div class="jumbotron jumbotron text-center">
+      <div class="container">
+        <h1 class="display-4"><i class="fas fa-fire"></i>Hot Restaurant</h1>
+        <hr>
+        <p class="lead">We only have 5 tables! Book your seat before they all are gone!</p>
+        <button class="btn btn-primary" type="submit"><i class="fas fa-clipboard-list">View Tables</i></button><button class="btn btn-danger" type="submit"><i class="far fa-credit-card"></i>Make Reservation</button>
+      </div>
+    </div>
+
+
+    <a href="Develop\pages\tables.html">API Table Link | </a>
+    <a href="Develop\pages\reserve.html">API Wait List</a>
+  </div>
     
 </body>
 </html>
