--- a/Develop/pages/reserve.html
+++ b/Develop/pages/reserve.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Reserve A Table</title>
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Reserve A Table</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="Develop\style.css">
 </head>
+
 <body>
-    
+  <div class="container">
+    <div class="main jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Hot Restaurant</h1>
+        <p class="lead">Make your reservation</p>
+        <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
+        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true"></i>:home:</a>
+      </div>
+    </div>
+
+
+    <div class="ReservationInput">
+      <div class="card">
+        <div class="card-header">
+          Table Reservations
+        </div>
+        <div class="card-body">
+          <form method="POST" role="form">
+
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="name">
+            </div>
+
+            <div class="form-group">
+              <label for="Phone Number">Phone Number</label>
+              <input type="text" class="form-control" id="Phone Number">
+            </div>
+
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" id="Email">
+            </div>
+
+            <div class="form-group">
+              <label for="unique ID">Unique ID</label>
+              <input type="text" class="form-control" id="Unique ID">
+            </div>
+    </div>
+  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Submit</a>
+
+  </div>
 </body>
+
 </html>
