--- a/Develop/pages/reserve.html
+++ b/Develop/pages/reserve.html
@@ -10,17 +10,19 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/723d8fa4ad.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="Develop\style.css">
 </head>
 
 <body>
   <div class="container">
-    <div class="main jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Hot Restaurant</h1>
-        <p class="lead">Make your reservation</p>
-        <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
-        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true"></i>:home:</a>
+    <div class="main jumbotron jumbotron text-center">
+      <h1 class="container">
+        <h1 class="display-4"><i class="fas fa-fire"></i> Hot Restaurant</h1>
+        <hr>
+        <p class="lead"><h4>Make your reservation</h4></p>
+        <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"><i class="far fa-list-alt"></i> View Tables</a>
+        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true"><i class="fas fa-home"></i></a>
       </div>
     </div>
 
@@ -35,25 +37,46 @@
 
             <div class="form-group">
               <label for="name">Name</label>
-              <input type="text" class="form-control" id="name">
+              <input type="text" class="form-control" id="customerName">
             </div>
 
             <div class="form-group">
-              <label for="Phone Number">Phone Number</label>
-              <input type="text" class="form-control" id="Phone Number">
+              <label for="phoneNumber">Phone Number</label>
+              <input type="text" class="form-control" id="phoneNumber">
             </div>
 
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="text" class="form-control" id="Email">
+              <input type="text" class="form-control" id="customerEmail">
             </div>
 
             <div class="form-group">
-              <label for="unique ID">Unique ID</label>
-              <input type="text" class="form-control" id="Unique ID">
+              <label for="uniqueID">Unique ID</label>
+              <input type="text" class="form-control" id="customerId">
             </div>
     </div>
   <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Submit</a>
+
+
+  <script type="text/javascript">
+    $("#add-btn").on("click", function(event) {
+      event.preventDefault();
+      var tableReservation = {
+        customerName: $("#name").val().trim(),
+        phoneNumber: $("#phoneNumber").val().trim(),
+        customerEmail: $("#email").val().trim(),
+        customerID: $("#uniqueID").val().trim()
+      };
+
+      $.post("/api/tableReservation", TableReservation)
+        .then(function(data) {
+          console.log("add.html", data);
+          alert("Reservation Information Added!");
+        });
+    });
+  </script>
+
+
 
   </div>
 </body>
