adding tables.html structure

--- a/Develop/pages/tables.html
+++ b/Develop/pages/tables.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Reserve A Table</title>
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Reserve A Table</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/723d8fa4ad.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
+  <div class="container">
+    <div class="main jumbotron jumbotron text-center">
+      <div class="container">
+        <h1 class="display-4">Hot Restaurant</h1>
+        <hr>
+        <p class="lead">Make your reservation</p>
+        <a href="#" class="btn btn-danger btn-lg active" role="button" aria-pressed="true">Current Reservations</a>
+        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true"><i class="fas fa-home"></i></a>
+      </div>
+    </div>
+
+
+    <div class="currentReservation">
+      <div class="card">
+        <div class="card-header">
+          Current Reservations
+        </div>
+        <div class="card-body">
+          <form method="POST" role="form">
+        </div>
+
+        <div class="waitingList">
+          <div class="card">
+            <div class="card-header">
+              Waiting List
+            </div>
+            <div class="card-body">
+              <form method="POST" role="form">
+          </div>
+
 </body>
+
 </html>
